--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     position: fixed;
     left: 0;
     bottom: 0;
+    z-index: 3;
 }
 
 #question-grid {
@@ -122,6 +123,9 @@ body{
     color: white;
     font-weight: bolder;
 }
+#answer-submit:hover {
+    cursor: pointer;
+}
 
 #score-panel {
     display: block;
@@ -135,4 +139,49 @@ body{
     font-family: sans-serif;
     color: white;
     text-transform: uppercase;
+    z-index: 1;
+}
+
+#modal {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(51, 51, 51, 0.8);
+    position: fixed;
+    top: 0;
+    left:0;
+    z-index: 1;
+}
+
+#modal-content {
+    width: 60vw;
+    height: 60vh;
+    background-color: rgb(13, 13, 102);
+    margin:auto;
+    margin-top: 3rem;
+    border-radius: 5px;
+    box-shadow: 10px 10px black;
+}
+
+#modal-question {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.5rem;
+    color: white;
+    text-align:center;
+    padding-top: 3rem;
+    padding-bottom:  3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+#close-modal {
+    color:white;
+    position: absolute;
+    font-size: 3rem;
+    right: 20vw;
+    top: 3rem;
+}
+
+#close-modal:hover {
+    cursor: pointer;
 }
